Bug 430359 - Tiny pictures get tiny thumbnails on Welcome Screen
Summary: Tiny pictures get tiny thumbnails on Welcome Screen
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.4.2-beta1
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2020-12-14 02:39 UTC by Tiar
Modified: 2020-12-19 14:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Welcome Screen in 4.4.2-beta1 with tiny (1x1 pixels) images (54.43 KB, image/png)
2020-12-14 02:39 UTC, Tiar
Details
Welcome Screen in 4.4.1 with normal size thumbnails (scaled up) (37.21 KB, image/png)
2020-12-14 02:40 UTC, Tiar
Details
Mini test file (20.47 KB, application/zip)
2020-12-14 02:46 UTC, Tiar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2020-12-14 02:39:18 UTC
Created attachment 134065 [details]
Welcome Screen in 4.4.2-beta1 with tiny (1x1 pixels) images

SUMMARY
When I had lots of tiny images, 4.4.1-beta2 Welcome Screen showed them as tiny little dots instead of proper thumbnails.

STEPS TO REPRODUCE
1. Load several tiny images (for example 1x1 pixels)
2. Open Krita 4.4.1. All images are visible.
3. Open Krita 4.4.2-beta1.

OBSERVED RESULT
Tiny dots instead of thumbnails.

EXPECTED RESULT
Thumbnails (scaled up to be big).

SOFTWARE/OS VERSIONS
Krita

 Version: 4.4.2-beta1
 Languages: en_US, en, en_US, en, en_US, en, pl_PL, pl, pl_PL, pl
 Hidpi: true

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9
Comment 1 Tiar 2020-12-14 02:40:37 UTC
Created attachment 134066 [details]
Welcome Screen in 4.4.1 with normal size thumbnails (scaled up)
Comment 2 Tiar 2020-12-14 02:46:08 UTC
Created attachment 134067 [details]
Mini test file
Comment 3 Tiar 2020-12-15 14:54:47 UTC
Git commit e04c60f5cee0e1e4b31c75f3603434bbfce639aa by Agata Cacko, on behalf of Dmitrii Utkin.
Committed on 15/12/2020 at 14:54.
Pushed by tymond into branch 'krita/4.3'.

Fix variable thumbnails sizes on Welcome Page

I (the committer) cherry-picked some parts of code from
38a2b3f90c2553fa762ffc9c6c6649295928db94
and
fe6eee42e1cf80dfe3304fb0f0d0d578a12f3ba3
made by Dmitrii Utkin.

M  +10   -2    libs/ui/KisWelcomePageWidget.cpp
M  +2    -2    libs/ui/dialogs/KisRecoverNamedAutosaveDialog.cpp
M  +33   -12   libs/ui/utils/KisFileIconCreator.cpp
M  +2    -2    libs/ui/utils/KisFileIconCreator.h

https://invent.kde.org/graphics/krita/commit/e04c60f5cee0e1e4b31c75f3603434bbfce639aa
Comment 4 Tiar 2020-12-19 14:05:17 UTC
Git commit 4c08aa209e8be9db321f222a57fa6673f2fa34f4 by Agata Cacko, on behalf of Dmitrii Utkin.
Committed on 19/12/2020 at 14:03.
Pushed by tymond into branch 'krita/4.4.2'.

Fix variable thumbnails sizes on Welcome Page

I (the committer) cherry-picked some parts of code from
38a2b3f90c2553fa762ffc9c6c6649295928db94
and
fe6eee42e1cf80dfe3304fb0f0d0d578a12f3ba3
made by Dmitrii Utkin.

M  +10   -2    libs/ui/KisWelcomePageWidget.cpp
M  +2    -2    libs/ui/dialogs/KisRecoverNamedAutosaveDialog.cpp
M  +33   -12   libs/ui/utils/KisFileIconCreator.cpp
M  +2    -2    libs/ui/utils/KisFileIconCreator.h

https://invent.kde.org/graphics/krita/commit/4c08aa209e8be9db321f222a57fa6673f2fa34f4