Fix variable thumbnails sizes on Welcome Page

I (the committer) cherry-picked some parts of code from
38a2b3f90c2553fa762ffc9c6c6649295928db94
and
fe6eee42e1cf80dfe3304fb0f0d0d578a12f3ba3
made by Dmitrii Utkin.

BUG:430359